alteracoes no css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1 id="user"></h1>
             <h2>Escolha o Tema que Deseja Jogar</h2>
             <main class="buttonGame">
-                <button onclick="option(1,'Matematica')">Matematica</button> 
+                <button onclick="option(1,'Matematica')">Matemática</button> 
                 <button onclick="option(2, 'Conhecimentos Gerais')">Conhecimentos Gerais</button>
                 <button onclick="exit()">Sair</button>
             </main>
